# process-hallowing-PoC

./: CMakeLists.txt  README.md  app.rc
cmake/: CMakeRC.cmake  CMakeRC.cmake:Zone.Identifier:$DATA
libs/phnt/: CMakelists.txt
resources/: icon.ico:Zone.Identifier:$DATA  main.cfg
src/: main.cpp
